--- a/react/vite-example/src/App.css
+++ b/react/vite-example/src/App.css
@@ -35,6 +35,10 @@
 
 .card {
   padding: 2em;
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
 }
 
 .read-the-docs {
